master-depls/00-supervision/k8s-config/manifests/10-prometheus/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  type: ClusterIP # default
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    prometheus: kube-prometheus-stack-prometheus # prometheus pod label
