master-depls/00-supervision/k8s-config/manifests/10-prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email"
  name: prometheus-ingress
spec:
  tls:
    - hosts:
        - prometheus.((/secrets/cloudfoundry_ops_domain))
      secretName: prometheus-tls
  rules:
    - host: prometheus.((/secrets/cloudfoundry_ops_domain))
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
