master-depls/00-supervision/k8s-config/manifests/10-prometheus/prometheus-oauth2-ingress.yaml
#additionnal Ingress, same host but specific path for oauth2 proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
  name: prometheus-oauth2-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.((/secrets/cloudfoundry_ops_domain))
      secretName: prometheus-tls
  rules:
    - host: prometheus.((/secrets/cloudfoundry_ops_domain))
      http:
        paths:
          - path: /oauth2
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
